# tutorial-django-2

./: db.sqlite3  pyproject.toml
livraria/: .pdm-python  db.sqlite3  pyproject.toml
livraria/config/: settings.py  urls.py
livraria/livraria/: admin.py  models.py  serializers.py  views.py
livraria/livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py  0005_alter_autor_options_alter_autor_email.py
livraria/livraria/models/: livro.py
livraria/livraria/views/: autor.py  categoria.py  livro.py
livraria/migrations/: 0001_initial.py
livraria/serializers/: livro.py
livraria/usuario/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
